[package]
name = "bdflib"
version = "0.1.0"
authors = ["trivernis <trivernis@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
license = "GPL-3"

[lib]
name = "bdf"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crc = "1.8.1"
xz2 = "0.1.6"
byteorder = "1.3.4"