[package]
name = "bdflib"
version = "0.3.1"
authors = ["trivernis <trivernis@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
readme = "README.md"
description = "A library to parse bdf files."
homepage = "https://github.com/parallel-programming-hwr/bdflib-rs"

[lib]
name = "bdf"
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crc = "1.8.1"
xz2 = "0.1.6"
byteorder = "1.3.4"
crossbeam-channel = "0.4.2"
crossbeam-utils = "0.7.2"
num_cpus = "1.12.0"